<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentationlayer.view.RestaurantFragment"
    android:background="@color/green_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <include
            android:id="@+id/in_bar"
            layout="@layout/top_details_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_restaurant_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/in_bar"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/ib_star_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_restaurant_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_restaurant_name"
            android:src="@drawable/baseline_star_empty_24"
            android:background="@color/green_bg"
            android:contentDescription="@string/ib_desc_favorite"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tv_text_price"
            android:layout_margin="5dp"/>

        <ImageView
            android:id="@+id/iv_restaurant_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            android:src="@drawable/ic_image_search_24"
            android:layout_margin="16dp"/>

        <RatingBar
            android:id="@+id/rb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_restaurant_image"
            android:stepSize="1"
            android:isIndicator="true"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/RatingBar"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rb_rating"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_address"
            app:layout_constraintTop_toBottomOf="@id/tv_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>